kubernetes/apps/default/nginx-reverse-proxy/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
  namespace: default
spec:
  selector:
    app: nginx-reverse-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
