kubernetes/apps/default/nginx-reverse-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
  generation: 1
  name: nginx-reverse-proxy
  namespace: default
spec:
  ingressClassName: external
  #annotations:
    #  external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
  rules:
    - host: www.bandcamp.tv
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: bandcamp.tv
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: puppet.lab.albatrossflavour.com
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: cd4pe.lab.albatrossflavour.com
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: scm.lab.albatrossflavour.com
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: dashboard.lab.albatrossflavour.com
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
