kubernetes/apps/default/nginx-reverse-proxy/app/plex-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-reverse-proxy-plex
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: plex.albatrossflavour.com
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
